stretching pagecontainer to the bottom of page, fixed refreshing after creating a recipe, added null message to groceries page

--- a/public/css/cookbook.css
+++ b/public/css/cookbook.css
@@ -34,6 +34,11 @@ input[type="radio"] {
     margin-right: 10px;
 }
 
+#createcookbook {
+    margin-left: 10px;
+}
+
+
 /*The specifics*/
 
 #labeldifficulty {
