--- a/public/css/grocery.css
+++ b/public/css/grocery.css
@@ -7,3 +7,6 @@
     padding-right: 6px;
 }
 
+#nullMessage {
+    text-align: center;
+}
